@@ -1,6 +1,8 @@
 V 0.3.0:
   - Integrated manga notifications
   - Made anime notifications more user-friendly
+  - Added sentry error logging
+  - Caches manga chapter guesses to not get rate limited by anilist
 V 0.2.0:
   - Now uses docker for Ci
   - Integrated new kudubot features
